# av_practice

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/aveditor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/message_queue/: handler.h  message_queue.h
app/src/main/cpp/common/util/: CommonUtils.h
app/src/main/cpp/jni/: CameraPreviewInterface.cpp  CameraPreviewInterface.h
app/src/main/cpp/preview/: CameraPreviewController.cpp  CameraPreviewController.h  CameraPreviewHandler.cpp  CameraPreviewHandler.h
app/src/main/java/com/example/aveditor/: MainActivity.kt
app/src/main/java/com/example/aveditor/gllearning/: GLSLFileName.kt  GlUtil.kt  MyTriangleRender.kt  MyTriangleShader.kt
app/src/main/java/com/example/aveditor/gllearning/ui/: TestOpenGLActivity.kt
app/src/main/java/com/example/aveditor/gllearning/utils/: GLESShaderUtil.kt  GLESUtil.kt  ResUtil.kt
app/src/main/java/com/example/aveditor/player/constants/: IntentExtra.kt
app/src/main/java/com/example/aveditor/player/ui/: VideoPlayerActivity.kt
app/src/main/java/com/example/aveditor/recorder/camera/: CameraPreviewHandler.kt  IPreviewHandler.kt
app/src/main/java/com/example/aveditor/recorder/ui/: VideoRecordActivity.kt
app/src/main/java/com/example/aveditor/recorder/view/: MySurfaceView.kt
app/src/main/java/com/example/aveditor/utils/: UIUtils.kt
app/src/main/res/layout/: activity_main.xml  activity_video_record.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/aveditor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
